--- a/.github/sync-files.yaml
+++ b/.github/sync-files.yaml
@@ -1,4 +1,5 @@
 - repository: autowarefoundation/sync-file-templates
+  source-dir: sources
   files:
     - source: .github/ISSUE_TEMPLATE/config.yaml
     - source: .github/ISSUE_TEMPLATE/task.yaml
