chore: update sync-files.yaml
Signed-off-by: Kazuki Ohtake <kazuki.ohtake@tier4.jp>

--- a/.github/sync-files.yaml
+++ b/.github/sync-files.yaml
@@ -3,8 +3,29 @@
   files:
     - source: .github/ISSUE_TEMPLATE/config.yml
     - source: .github/ISSUE_TEMPLATE/task.yaml
+    - source: .github/dependabot.yaml
     - source: .github/pull_request_template.md
+    - source: .github/stale.yml
+    - source: .github/workflows/comment-on-pr.yaml
+    - source: .github/workflows/delete-closed-pr-docs.yaml
+    - source: .github/workflows/deploy-docs.yaml
+    - source: .github/workflows/pre-commit.yaml
+    - source: .github/workflows/semantic-pull-request.yaml
+    - source: .github/workflows/spell-check-differential.yaml
+    - source: .github/workflows/sync-files.yaml
+    - source: .markdown-lint-check.json
+    - source: .markdownlint.yml
+    - source: .pre-commit-config.yaml
+    - source: .prettierignore
+    - source: .prettierrc.json
+    - source: .yamllint.yaml
     - source: CODE_OF_CONDUCT.md
     - source: CONTRIBUTING.md
     - source: DISCLAIMER.md
     - source: LICENSE
+    - source: mkdocs-base.yaml
+      dest: mkdocs.yaml
+      pre-commands: |
+        sd "Autoware Documentation" "ODD Usecase Scenario" {source}
+        sd "autoware-documentation" "odd-usecase-scenario" {source}
+        sd "repo_url: .*" "repo_url: https://github.com/autowarefoundation/odd-usecase-scenario" {source}
