--- a/odd/pov/vision_pilot_by_taxonomy_element.yaml
+++ b/odd/pov/vision_pilot_by_taxonomy_element.yaml
@@ -1,5 +1,5 @@
 IMPORT:
-  - ../Domain_Concapts_Definition_ISO_34503.yaml
+  - ../ODD_Taxonomy_Extended.yaml
 
 ODD:
   pov_vision_pilot_main_module:
