additional spelling fixes
Signed-off-by: Diego Yabuki <diegoken.yabuki@tier4.jp>

--- a/odd/Domain_Concepts_Definition_ISO_34503.yaml
+++ b/odd/Domain_Concepts_Definition_ISO_34503.yaml
@@ -79,7 +79,7 @@ TAXONOMY:
         sign_types:
           - regulatory_signs # Used to enforce traffic laws. e.g. traffic lights
           - warning_signs # Advisory signs, warning drivers of hazardous situations or conditions
-          - information_signs # Diretcions and information about services
+          - information_signs # Directions and information about services
         sign_features:
           - movable_signs
           - fixed_signs
